Fix: Small change with line heights in experience timeline on mobile

--- a/Frontend/Portfolio/Styles/Sections/Experience.scss
+++ b/Frontend/Portfolio/Styles/Sections/Experience.scss
@@ -107,10 +107,10 @@
     
     @include RespondTo("Mobile") {
 
-        margin-top: -50px;
-        margin-bottom: -50px;
+        margin-top: -42px;
+        margin-bottom: -42px;
 
-        height: 150px;
+        height: 125px;
 
     }
 
